// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`moves worklogs from activities with different names among all groups > expected 1`] = `
{
  "hasChanges": true,
  "selectedWorklogIds": [],
  "tree": [
    {
      "activities": [
        {
          "name": "Activity 1.1",
          "worklogs": [],
        },
        {
          "name": "Activity 1.2",
          "worklogs": [],
        },
      ],
      "id": "group-1",
      "name": "Group 1",
    },
    {
      "activities": [
        {
          "name": "Activity 1.2",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
        {
          "name": "Activity 1.1",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
        {
          "name": "Activity 2.1",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
        {
          "name": "Activity 2.2",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
      ],
      "id": "group-2",
      "name": "Group 2",
    },
  ],
}
`;

exports[`moves worklogs from activities with different names among all groups > initial 1`] = `
{
  "hasChanges": false,
  "selectedWorklogIds": [
    "worklog-activity-1-1-2025-09-01",
    "worklog-activity-1-1-2025-09-02",
    "worklog-activity-1-1-2025-09-03",
    "worklog-activity-1-1-2025-09-04",
    "worklog-activity-1-1-2025-09-05",
    "worklog-activity-1-1-2025-09-08",
    "worklog-activity-1-1-2025-09-09",
    "worklog-activity-1-1-2025-09-10",
    "worklog-activity-1-1-2025-09-11",
    "worklog-activity-1-1-2025-09-12",
    "worklog-activity-1-1-2025-09-15",
    "worklog-activity-1-1-2025-09-16",
    "worklog-activity-1-1-2025-09-17",
    "worklog-activity-1-1-2025-09-18",
    "worklog-activity-1-1-2025-09-19",
    "worklog-activity-1-1-2025-09-22",
    "worklog-activity-1-1-2025-09-23",
    "worklog-activity-1-1-2025-09-24",
    "worklog-activity-1-1-2025-09-25",
    "worklog-activity-1-1-2025-09-26",
    "worklog-activity-1-1-2025-09-29",
    "worklog-activity-1-1-2025-09-30",
    "worklog-activity-1-2-2025-09-01",
    "worklog-activity-1-2-2025-09-02",
    "worklog-activity-1-2-2025-09-03",
    "worklog-activity-1-2-2025-09-04",
    "worklog-activity-1-2-2025-09-05",
    "worklog-activity-1-2-2025-09-08",
    "worklog-activity-1-2-2025-09-09",
    "worklog-activity-1-2-2025-09-10",
    "worklog-activity-1-2-2025-09-11",
    "worklog-activity-1-2-2025-09-12",
    "worklog-activity-1-2-2025-09-15",
    "worklog-activity-1-2-2025-09-16",
    "worklog-activity-1-2-2025-09-17",
    "worklog-activity-1-2-2025-09-18",
    "worklog-activity-1-2-2025-09-19",
    "worklog-activity-1-2-2025-09-22",
    "worklog-activity-1-2-2025-09-23",
    "worklog-activity-1-2-2025-09-24",
    "worklog-activity-1-2-2025-09-25",
    "worklog-activity-1-2-2025-09-26",
    "worklog-activity-1-2-2025-09-29",
    "worklog-activity-1-2-2025-09-30",
    "worklog-activity-2-1-2025-09-01",
    "worklog-activity-2-1-2025-09-02",
    "worklog-activity-2-1-2025-09-03",
    "worklog-activity-2-1-2025-09-04",
    "worklog-activity-2-1-2025-09-05",
    "worklog-activity-2-1-2025-09-08",
    "worklog-activity-2-1-2025-09-09",
    "worklog-activity-2-1-2025-09-10",
    "worklog-activity-2-1-2025-09-11",
    "worklog-activity-2-1-2025-09-12",
    "worklog-activity-2-1-2025-09-15",
    "worklog-activity-2-1-2025-09-16",
    "worklog-activity-2-1-2025-09-17",
    "worklog-activity-2-1-2025-09-18",
    "worklog-activity-2-1-2025-09-19",
    "worklog-activity-2-1-2025-09-22",
    "worklog-activity-2-1-2025-09-23",
    "worklog-activity-2-1-2025-09-24",
    "worklog-activity-2-1-2025-09-25",
    "worklog-activity-2-1-2025-09-26",
    "worklog-activity-2-1-2025-09-29",
    "worklog-activity-2-1-2025-09-30",
    "worklog-activity-2-2-2025-09-01",
    "worklog-activity-2-2-2025-09-02",
    "worklog-activity-2-2-2025-09-03",
    "worklog-activity-2-2-2025-09-04",
    "worklog-activity-2-2-2025-09-05",
    "worklog-activity-2-2-2025-09-08",
    "worklog-activity-2-2-2025-09-09",
    "worklog-activity-2-2-2025-09-10",
    "worklog-activity-2-2-2025-09-11",
    "worklog-activity-2-2-2025-09-12",
    "worklog-activity-2-2-2025-09-15",
    "worklog-activity-2-2-2025-09-16",
    "worklog-activity-2-2-2025-09-17",
    "worklog-activity-2-2-2025-09-18",
    "worklog-activity-2-2-2025-09-19",
    "worklog-activity-2-2-2025-09-22",
    "worklog-activity-2-2-2025-09-23",
    "worklog-activity-2-2-2025-09-24",
    "worklog-activity-2-2-2025-09-25",
    "worklog-activity-2-2-2025-09-26",
    "worklog-activity-2-2-2025-09-29",
    "worklog-activity-2-2-2025-09-30",
  ],
  "tree": [
    {
      "activities": [
        {
          "name": "Activity 1.1",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
        {
          "name": "Activity 1.2",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
      ],
      "id": "group-1",
      "name": "Group 1",
    },
    {
      "activities": [
        {
          "name": "Activity 2.1",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
        {
          "name": "Activity 2.2",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
      ],
      "id": "group-2",
      "name": "Group 2",
    },
  ],
}
`;

exports[`moves worklogs from activities with different names within groups > expected 1`] = `
{
  "hasChanges": true,
  "selectedWorklogIds": [],
  "tree": [
    {
      "activities": [
        {
          "name": "Activity 1",
          "worklogs": [],
        },
        {
          "name": "Activity 2",
          "worklogs": [],
        },
      ],
      "id": "group-1",
      "name": "Group 1",
    },
    {
      "activities": [
        {
          "name": "Activity 1",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 16,
            },
            {
              "date": "2025-09-02",
              "duration": 16,
            },
            {
              "date": "2025-09-03",
              "duration": 16,
            },
            {
              "date": "2025-09-04",
              "duration": 16,
            },
            {
              "date": "2025-09-05",
              "duration": 16,
            },
            {
              "date": "2025-09-08",
              "duration": 16,
            },
            {
              "date": "2025-09-09",
              "duration": 16,
            },
            {
              "date": "2025-09-10",
              "duration": 16,
            },
            {
              "date": "2025-09-11",
              "duration": 16,
            },
            {
              "date": "2025-09-12",
              "duration": 16,
            },
            {
              "date": "2025-09-15",
              "duration": 16,
            },
            {
              "date": "2025-09-16",
              "duration": 16,
            },
            {
              "date": "2025-09-17",
              "duration": 16,
            },
            {
              "date": "2025-09-18",
              "duration": 16,
            },
            {
              "date": "2025-09-19",
              "duration": 16,
            },
            {
              "date": "2025-09-22",
              "duration": 16,
            },
            {
              "date": "2025-09-23",
              "duration": 16,
            },
            {
              "date": "2025-09-24",
              "duration": 16,
            },
            {
              "date": "2025-09-25",
              "duration": 16,
            },
            {
              "date": "2025-09-26",
              "duration": 16,
            },
            {
              "date": "2025-09-29",
              "duration": 16,
            },
            {
              "date": "2025-09-30",
              "duration": 16,
            },
          ],
        },
        {
          "name": "Activity 2",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 16,
            },
            {
              "date": "2025-09-02",
              "duration": 16,
            },
            {
              "date": "2025-09-03",
              "duration": 16,
            },
            {
              "date": "2025-09-04",
              "duration": 16,
            },
            {
              "date": "2025-09-05",
              "duration": 16,
            },
            {
              "date": "2025-09-08",
              "duration": 16,
            },
            {
              "date": "2025-09-09",
              "duration": 16,
            },
            {
              "date": "2025-09-10",
              "duration": 16,
            },
            {
              "date": "2025-09-11",
              "duration": 16,
            },
            {
              "date": "2025-09-12",
              "duration": 16,
            },
            {
              "date": "2025-09-15",
              "duration": 16,
            },
            {
              "date": "2025-09-16",
              "duration": 16,
            },
            {
              "date": "2025-09-17",
              "duration": 16,
            },
            {
              "date": "2025-09-18",
              "duration": 16,
            },
            {
              "date": "2025-09-19",
              "duration": 16,
            },
            {
              "date": "2025-09-22",
              "duration": 16,
            },
            {
              "date": "2025-09-23",
              "duration": 16,
            },
            {
              "date": "2025-09-24",
              "duration": 16,
            },
            {
              "date": "2025-09-25",
              "duration": 16,
            },
            {
              "date": "2025-09-26",
              "duration": 16,
            },
            {
              "date": "2025-09-29",
              "duration": 16,
            },
            {
              "date": "2025-09-30",
              "duration": 16,
            },
          ],
        },
      ],
      "id": "group-2",
      "name": "Group 2",
    },
  ],
}
`;

exports[`moves worklogs from activities with different names within groups > initial 1`] = `
{
  "hasChanges": false,
  "selectedWorklogIds": [
    "worklog-activity-1-1-2025-09-01",
    "worklog-activity-1-1-2025-09-02",
    "worklog-activity-1-1-2025-09-03",
    "worklog-activity-1-1-2025-09-04",
    "worklog-activity-1-1-2025-09-05",
    "worklog-activity-1-1-2025-09-08",
    "worklog-activity-1-1-2025-09-09",
    "worklog-activity-1-1-2025-09-10",
    "worklog-activity-1-1-2025-09-11",
    "worklog-activity-1-1-2025-09-12",
    "worklog-activity-1-1-2025-09-15",
    "worklog-activity-1-1-2025-09-16",
    "worklog-activity-1-1-2025-09-17",
    "worklog-activity-1-1-2025-09-18",
    "worklog-activity-1-1-2025-09-19",
    "worklog-activity-1-1-2025-09-22",
    "worklog-activity-1-1-2025-09-23",
    "worklog-activity-1-1-2025-09-24",
    "worklog-activity-1-1-2025-09-25",
    "worklog-activity-1-1-2025-09-26",
    "worklog-activity-1-1-2025-09-29",
    "worklog-activity-1-1-2025-09-30",
    "worklog-activity-1-2-2025-09-01",
    "worklog-activity-1-2-2025-09-02",
    "worklog-activity-1-2-2025-09-03",
    "worklog-activity-1-2-2025-09-04",
    "worklog-activity-1-2-2025-09-05",
    "worklog-activity-1-2-2025-09-08",
    "worklog-activity-1-2-2025-09-09",
    "worklog-activity-1-2-2025-09-10",
    "worklog-activity-1-2-2025-09-11",
    "worklog-activity-1-2-2025-09-12",
    "worklog-activity-1-2-2025-09-15",
    "worklog-activity-1-2-2025-09-16",
    "worklog-activity-1-2-2025-09-17",
    "worklog-activity-1-2-2025-09-18",
    "worklog-activity-1-2-2025-09-19",
    "worklog-activity-1-2-2025-09-22",
    "worklog-activity-1-2-2025-09-23",
    "worklog-activity-1-2-2025-09-24",
    "worklog-activity-1-2-2025-09-25",
    "worklog-activity-1-2-2025-09-26",
    "worklog-activity-1-2-2025-09-29",
    "worklog-activity-1-2-2025-09-30",
    "worklog-activity-2-1-2025-09-01",
    "worklog-activity-2-1-2025-09-02",
    "worklog-activity-2-1-2025-09-03",
    "worklog-activity-2-1-2025-09-04",
    "worklog-activity-2-1-2025-09-05",
    "worklog-activity-2-1-2025-09-08",
    "worklog-activity-2-1-2025-09-09",
    "worklog-activity-2-1-2025-09-10",
    "worklog-activity-2-1-2025-09-11",
    "worklog-activity-2-1-2025-09-12",
    "worklog-activity-2-1-2025-09-15",
    "worklog-activity-2-1-2025-09-16",
    "worklog-activity-2-1-2025-09-17",
    "worklog-activity-2-1-2025-09-18",
    "worklog-activity-2-1-2025-09-19",
    "worklog-activity-2-1-2025-09-22",
    "worklog-activity-2-1-2025-09-23",
    "worklog-activity-2-1-2025-09-24",
    "worklog-activity-2-1-2025-09-25",
    "worklog-activity-2-1-2025-09-26",
    "worklog-activity-2-1-2025-09-29",
    "worklog-activity-2-1-2025-09-30",
    "worklog-activity-2-2-2025-09-01",
    "worklog-activity-2-2-2025-09-02",
    "worklog-activity-2-2-2025-09-03",
    "worklog-activity-2-2-2025-09-04",
    "worklog-activity-2-2-2025-09-05",
    "worklog-activity-2-2-2025-09-08",
    "worklog-activity-2-2-2025-09-09",
    "worklog-activity-2-2-2025-09-10",
    "worklog-activity-2-2-2025-09-11",
    "worklog-activity-2-2-2025-09-12",
    "worklog-activity-2-2-2025-09-15",
    "worklog-activity-2-2-2025-09-16",
    "worklog-activity-2-2-2025-09-17",
    "worklog-activity-2-2-2025-09-18",
    "worklog-activity-2-2-2025-09-19",
    "worklog-activity-2-2-2025-09-22",
    "worklog-activity-2-2-2025-09-23",
    "worklog-activity-2-2-2025-09-24",
    "worklog-activity-2-2-2025-09-25",
    "worklog-activity-2-2-2025-09-26",
    "worklog-activity-2-2-2025-09-29",
    "worklog-activity-2-2-2025-09-30",
  ],
  "tree": [
    {
      "activities": [
        {
          "name": "Activity 1",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
        {
          "name": "Activity 2",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
      ],
      "id": "group-1",
      "name": "Group 1",
    },
    {
      "activities": [
        {
          "name": "Activity 1",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
        {
          "name": "Activity 2",
          "worklogs": [
            {
              "date": "2025-09-01",
              "duration": 8,
            },
            {
              "date": "2025-09-02",
              "duration": 8,
            },
            {
              "date": "2025-09-03",
              "duration": 8,
            },
            {
              "date": "2025-09-04",
              "duration": 8,
            },
            {
              "date": "2025-09-05",
              "duration": 8,
            },
            {
              "date": "2025-09-08",
              "duration": 8,
            },
            {
              "date": "2025-09-09",
              "duration": 8,
            },
            {
              "date": "2025-09-10",
              "duration": 8,
            },
            {
              "date": "2025-09-11",
              "duration": 8,
            },
            {
              "date": "2025-09-12",
              "duration": 8,
            },
            {
              "date": "2025-09-15",
              "duration": 8,
            },
            {
              "date": "2025-09-16",
              "duration": 8,
            },
            {
              "date": "2025-09-17",
              "duration": 8,
            },
            {
              "date": "2025-09-18",
              "duration": 8,
            },
            {
              "date": "2025-09-19",
              "duration": 8,
            },
            {
              "date": "2025-09-22",
              "duration": 8,
            },
            {
              "date": "2025-09-23",
              "duration": 8,
            },
            {
              "date": "2025-09-24",
              "duration": 8,
            },
            {
              "date": "2025-09-25",
              "duration": 8,
            },
            {
              "date": "2025-09-26",
              "duration": 8,
            },
            {
              "date": "2025-09-29",
              "duration": 8,
            },
            {
              "date": "2025-09-30",
              "duration": 8,
            },
          ],
        },
      ],
      "id": "group-2",
      "name": "Group 2",
    },
  ],
}
`;
